force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/vlocity_cmt__VlocityIntegrationSetting__mdt.object-meta.xml
<CustomObject>
    <label>Vlocity Integration Setting</label>
    <pluralLabel>Vlocity Integration Settings</pluralLabel>
</CustomObject>