force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__APIName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__APIName__c</fullName>
    <description>API name or module name for which settings are configured</description>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>