force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__APIType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__APIType__c</fullName>
    <label>Type Of API</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CommerceCloud</fullName>
            </value>
            <value>
                <fullName>Matrixx</fullName>
            </value>
            <value>
                <fullName>TMForum</fullName>
            </value>
            <value>
                <fullName>FlowOne</fullName>
            </value>
            <value>
                <fullName>AdSales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>