force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DefaultValue__c</fullName>
    <description>The default value of setting</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>