force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Description__c</fullName>
    <description>Description for the setting</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>