force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable and disable the settings</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>