force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__Key__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Key__c</fullName>
    <description>Setting name</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>