force-app/main/default/objects/vlocity_cmt__VlocityIntegrationSetting__mdt/fields/vlocity_cmt__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Value__c</fullName>
    <description>It will be deprecated as this feild was not SubscriberControlled when Managed Org was created.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>